--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Dev mode
+DEV_MODE=true
+
 # The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
 ENVIRONMENT="dev"
 
