Clear template caches on load in dev environments

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# Template caching
+CLEAR_TEMPLATE_CACHE_ON_LOAD=true
+
+# The site URL
+SITE_URL="http://buzzingpixel.test"
+
 # Dev mode
 DEV_MODE=true
 
