--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "craftcms/cms": "^3.0.0-RC1",
-        "vlucas/phpdotenv": "^2.4.0"
+        "vlucas/phpdotenv": "^2.4.0",
+        "buzzingpixel/craft-static": "^1.0.3"
     },
     "config": {
         "optimize-autoloader": true,
