--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "fab-build-next": "^1.0.1",
         "fab.controller": "^1.2.1",
         "fab.model": "^1.2.1",
+        "fabcss.code": "^1.3.1",
         "fabcss.lists": "^1.3.0",
         "fabcss.reset": "^1.3.0",
         "fabcss.typography": "^1.3.0",
