Add background image to header

--- a/project.json
+++ b/project.json
@@ -2,6 +2,7 @@
     "proxy": "http://buzzingpixel.test",
     "watch": [
         "config/**",
+        "content/**",
         "dev/**",
         "templates/**"
     ]
