--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "https://buzzingpixel.com/",
     "type": "project",
     "require": {
-        "craftcms/cms": "^3.0.0-RC1",
+        "craftcms/cms": "^3.0.0",
         "vlucas/phpdotenv": "^2.4.0",
         "buzzingpixel/craft-static": "^1.0.3",
         "mrclay/minify": "^3.0",
@@ -16,7 +16,7 @@
     },
     "config": {
         "platform": {
-            "php": "7.0"
+            "php": "7.1.3"
         }
     },
     "autoload": {
