--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "felicity-php/felicity-datamodel": "^1.0.1",
         "hyn/frontmatter": "^1.1",
         "michelf/php-smartypants": "^1.8",
-        "timostamm/text-truncation": "dev-master"
+        "timostamm/text-truncation": "dev-master",
+        "cocur/slugify": "^3.1"
     },
     "config": {
         "platform": {
