--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ],
     "dependencies": {
         "fab-build-next": "^1.0.1",
+        "fab.assets": "^1.2.1",
         "fab.controller": "^1.2.1",
         "fab.model": "^1.2.1",
         "fabcss.code": "^1.3.1",
