Create store module

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "autoload": {
         "psr-4": {
-            "dev\\": "dev/"
+            "dev\\": "dev/",
+            "modules\\": "modules/"
         }
     }
 }
