--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "homepage": "https://buzzingpixel.com/",
     "type": "project",
     "require": {
+        "php": ">=7.0.0",
         "craftcms/cms": "^3.0.0",
         "vlucas/phpdotenv": "^2.4.0",
         "buzzingpixel/craft-static": "^1.0.3",
@@ -14,6 +15,9 @@
         "michelf/php-smartypants": "^1.8",
         "timostamm/text-truncation": "dev-master",
         "cocur/slugify": "^3.1"
+    },
+    "require-dev": {
+        "roave/security-advisories": "dev-master"
     },
     "config": {
         "platform": {
