--- a/project.json
+++ b/project.json
@@ -5,5 +5,8 @@
         "content/**",
         "dev/**",
         "templates/**"
+    ],
+    "jsBuild": [
+        "node_modules/cleave.js/dist/cleave.js"
     ]
 }
