--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "hyn/frontmatter": "^1.1",
         "michelf/php-smartypants": "^1.8",
         "timostamm/text-truncation": "dev-master",
-        "cocur/slugify": "^3.1"
+        "cocur/slugify": "^3.1",
+        "league/iso3166": "^2.1"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master"
