--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,19 @@
+################################################################################
+### Docker #####################################################################
+################################################################################
+
+dockerNginxConfFile=./serverConfig/nginx/buzzingpixel.test.conf
+dockerPhpEnvIni=./serverConfig/php/php-config-dev.ini
+dockerDbDataDir=./db
+
+
+
+
+
+################################################################################
+### Craft ######################################################################
+################################################################################
+
 # Template caching
 CLEAR_TEMPLATE_CACHE_ON_LOAD=true
 
