--- a/serverConfig/nginx/buzzingpixel.test.conf
+++ b/serverConfig/nginx/buzzingpixel.test.conf
@@ -6,7 +6,7 @@ server {
 
     # Site config
     server_name buzzingpixel.test;
-    root /home/vagrant/development/public;
+    root /app/public;
 
     # Indexes
     index index.php index.html index.htm;
@@ -20,7 +20,7 @@ server {
         log_not_found off;
     }
     access_log off;
-    error_log /var/log/nginx/buzzingpixel.test-error.log error;
+    error_log  /var/log/nginx/error.log;
 
     # Errors
     # error_page 404 /404.html;
@@ -32,22 +32,13 @@ server {
 
     # Serve PHP
     location ~ \.php$ {
+        try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-
-        # PHP 5.3.29
-        # fastcgi_pass unix:/opt/php-5.3.29/var/run/php-fpm.sock;
-
-        # PHP 5.6.30
-        # fastcgi_pass unix:/opt/php-5.6.30/var/run/php-fpm.sock;
-
-        # PHP 7.0.18
-        # fastcgi_pass unix:/opt/php-7.0.18/var/run/php-fpm.sock;
-
-        # PHP 7.1.3
-        fastcgi_pass unix:/opt/php-7.1.3/var/run/php-fpm.sock;
-
+        fastcgi_pass php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
 
         fastcgi_buffers 8 16k;
         fastcgi_buffer_size 32k;
