Fix issues with docker db backup cron

--- a/serverConfig/db/Dockerfile
+++ b/serverConfig/db/Dockerfile
@@ -1,5 +1,8 @@
 FROM mariadb:latest
 COPY .profile /root/.profile
 COPY .profile /root/.bashrc
-ADD crontab /etc/cron.d/custom-cron
-RUN chmod 0644 /etc/cron.d/custom-cron
+RUN apt-get update && apt-get install -y cron
+COPY crontab /root/crontab
+RUN /usr/bin/crontab /root/crontab
+RUN rm /root/crontab
+RUN /usr/sbin/cron
