Fix missing and incorrect variables in env example

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@
 dockerNginxConfFile=./serverConfig/nginx/buzzingpixel.test.conf
 dockerPhpEnvIni=./serverConfig/php/php-config-dev.ini
 dockerDbDataDir=./db
+mySqlRootPassword=root
 
 
 
@@ -33,7 +34,7 @@ SECURITY_KEY=""
 DB_DRIVER="mysql"
 
 # The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
-DB_SERVER="localhost"
+DB_SERVER="db"
 
 # The database username to connect with
 DB_USER="site"
