Fix additional issues with the 30 minute db backup cron

--- a/serverConfig/db/Dockerfile
+++ b/serverConfig/db/Dockerfile
@@ -1,8 +1,11 @@
 FROM mariadb:latest
 COPY .profile /root/.profile
 COPY .profile /root/.bashrc
-RUN apt-get update && apt-get install -y cron
+RUN apt-get update && apt-get install -y cron sudo
 COPY crontab /root/crontab
 RUN /usr/bin/crontab /root/crontab
 RUN rm /root/crontab
-RUN /usr/sbin/cron
+RUN echo "mysql2:x:1000:50::/home/mysql:/bin/sh" >> /etc/passwd
+RUN echo "mysql2 ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
+COPY run.sh /usr/local/config/run.sh
+ENTRYPOINT exec /usr/local/config/run.sh
