Movie Database and Nginx ports to the env config file

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@
 dockerNginxConfFile=./serverConfig/nginx/buzzingpixel.test.conf
 dockerPhpEnvIni=./serverConfig/php/php-config-dev.ini
 dockerDbDataDir=./db
+dockerNginxPort=42245
+dockerDbPort=30013
 mySqlRootPassword=root
 
 
@@ -19,7 +21,7 @@ mySqlRootPassword=root
 CLEAR_TEMPLATE_CACHE_ON_LOAD=true
 
 # The site URL
-SITE_URL="http://buzzingpixel.test"
+SITE_URL="http://buzzingpixel.test:42245"
 
 # Dev mode
 DEV_MODE=true
