Add additional linux/bash tools to docker environments

--- a/serverConfig/db/Dockerfile
+++ b/serverConfig/db/Dockerfile
@@ -9,4 +9,5 @@ RUN echo "mysql2:x:1000:50::/home/mysql:/bin/sh" >> /etc/passwd
 RUN echo "mysql2 ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 COPY run.sh /usr/local/config/run.sh
 RUN chmod +x /usr/local/config/run.sh
+RUN apt-get install -y git
 ENTRYPOINT exec /usr/local/config/run.sh
