Fix a DB Container run permissions issue

--- a/serverConfig/db/Dockerfile
+++ b/serverConfig/db/Dockerfile
@@ -10,4 +10,5 @@ RUN echo "mysql2 ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 COPY run.sh /usr/local/config/run.sh
 RUN chmod +x /usr/local/config/run.sh
 RUN apt-get install -y git
+RUN chmod 0777 /usr/local/config/run.sh
 ENTRYPOINT exec /usr/local/config/run.sh
