--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "michelf/php-smartypants": "^1.8",
         "timostamm/text-truncation": "dev-master",
         "cocur/slugify": "^3.1",
-        "league/iso3166": "^2.1"
+        "league/iso3166": "^2.1",
+        "ramsey/uuid": "^3.7"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master"
