--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,17 @@ mySqlRootPassword=root
 
 
 ################################################################################
+### Store ######################################################################
+################################################################################
+
+stripePublishableKey="KEY_HERE"
+stripeSecretKey="KEY_HERE"
+
+
+
+
+
+################################################################################
 ### Craft ######################################################################
 ################################################################################
 
