Begin modifications for cards stored on Stripe.com

--- a/project.json
+++ b/project.json
@@ -4,6 +4,7 @@
         "config/**",
         "content/**",
         "dev/**",
+        "modules/**",
         "templates/**"
     ],
     "jsBuild": [
